force-app/main/default/objects/APIIntegration__mdt/APIIntegration__mdt.object-meta.xml
<CustomObject>
    <label>API Integration</label>
    <pluralLabel>API Integrations</pluralLabel>
</CustomObject>