force-app/main/default/objects/APIIntegration__mdt/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <description>Key:Value pairs to be sent in the JSON. Each entry should be added on a new line with static strings enclosed between double quotes.</description>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>