force-app/main/default/objects/APIIntegration__mdt/fields/RequestHeaders__c.field-meta.xml
<CustomField>
    <fullName>RequestHeaders__c</fullName>
    <description>Parameters to be set in the header. Each key:value pair on a new line</description>
    <inlineHelpText>Parameters to be set in the header. Each key:value pair on a new line</inlineHelpText>
    <label>Request Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>