force-app/main/default/objects/APIIntegration__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>Maximum time in milliseconds after which the request times out. Max possible value : 120000 (2 minutes)</description>
    <inlineHelpText>Maximum time in milliseconds after which the request times out. Max possible value : 120000 (2 minutes)</inlineHelpText>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>